# claude-local-memory-server

./: .dockerignore  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
scripts/: backup.sh  install-docker.sh  install-systemd.sh  install.sh  uninstall.sh
src/claude_memory/: __init__.py  __main__.py  api.py  cli.py  client.py  server.py  storage.py
tests/: conftest.py  test_storage.py
