[project]
name = "claude-local-memory-server"
version = "0.1.0"
description = "Persistent, shared memory for Claude Code via MCP"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Thomas"},
]
keywords = [
    "claude",
    "mcp",
    "model-context-protocol", 
    "memory",
    "duckdb",
    "parquet",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "duckdb>=1.0.0",
    "pyarrow>=17.0.0",
    "pytz>=2024.1",
    "click>=8.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/thomasbeste/claude-local-memory-server"
Repository = "https://github.com/thomasbeste/claude-local-memory-server"
Issues = "https://github.com/thomasbeste/claude-local-memory-server/issues"

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "slowapi>=0.1.9",
    "sse-starlette>=2.0.0",
]
embeddings = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]
all = [
    "claude-local-memory-server[server,embeddings]",
]

[project.scripts]
claude-memory = "claude_memory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_memory"]

[tool.ruff]
line-length = 100
target-version = "py311"
